force-app/main/default/objects/Form_Template__c/Form_Template__c.object-meta.xml
<CustomObject>
    <description>Form Template stores all the master data of macros set by Admin that will be visible on the forms. One record in this object respresents one macro that can be assigned to the multiple forms.</description>
    <label>Form Template</label>
    <nameField>
        <label>Form Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>