force-app/main/default/objects/Form_Template__c/fields/Form_Description__c.field-meta.xml
<CustomField>
    <fullName>Form_Description__c</fullName>
    <label>Template Description</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>