force-app/main/default/objects/Form_Template__c/fields/Form_Label__c.field-meta.xml
<CustomField>
    <fullName>Form_Label__c</fullName>
    <label>Template Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>