force-app/main/default/objects/Form_Template__c/fields/Select_Forms__c.field-meta.xml
<CustomField>
    <fullName>Select_Forms__c</fullName>
    <label>Select Forms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Independence day</fullName>
            </value>
            <value>
                <fullName>Meghna Test Record</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>